<resources>
    <string name="app_name">Give4Friends</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="API_KEY">a6ec0399e2688d91fe0d419cf84443d0</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="account">Account</string>
    <string name="privacy">Privacy</string>
    <string name="payment">Payment Methods</string>
    <string name="notifications">Notifications</string>

    <!-- Messages Preferences -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="visibility">Visibility</string>
    <string name="Public">Public</string>
    <string name="OnlyFriends">Only Friends</string>
    <string name="Private">Private</string>

    <!-- Sync Preferences -->
    <string name="sync_title">filler</string>
    <string name="attachment_title">default</string>
    <string name="transaction_title">Donations in your name</string>
    <string name="likes_title">Liked transactions</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- URLs -->
    <string name="giveWell"><a href="https://www.givewell.org">GiveWell</a>"."</string>

    <!-- Facebook Authentication -->
    <string name="facebook_app_id">334417654174890</string>
    <string name="fb_login_protocol_scheme">fb334417654174890</string>


</resources>
