<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/account">


        <EditTextPreference
            app:key="username"
            app:title="@string/username"
            />

        <EditTextPreference
            app:key="password"
            app:title="@string/password"
             />

        <EditTextPreference
            app:key="email"
            app:title="@string/email"
            />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/privacy">

        <ListPreference
            app:defaultValue="public"
            app:entries="@array/privacy_entries"
            app:entryValues="@array/privacy_values"
            app:key="reply"
            app:title="Transaction Visibility"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/payment">


        <Preference
            app:key="financial info"
            app:title="Change payment information"
            app:useSimpleSummaryProvider="true"/>
        />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:key="transaction"
            app:title="@string/transaction_title" />

        <SwitchPreferenceCompat
            app:key="likes"
            app:title="@string/likes_title" />



    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
